# mdr-service

./: .mega-linter.yml  Cargo.toml  Dockerfile  README.md  app.yaml
.github/workflows/: build.yaml  mega-linter.yml  release.yaml
.sqlx/: query-05310b355bf039ba0b18d8c4ffb7fc6344f436e02aadb76905b8e12728ed1df2.json  query-175e8430c431d192de0e747921f769e6b6d821211bdc8cfff14362900755984f.json  query-3a6f4a1a74ed8df424d467bdce1e111ce4ac4caa6731e526ac2a7878990d1b1a.json  query-41bec3aee6a70fbd7dc63dd8abcffea7223424bd117f2cb27f57127ec491b2d6.json  query-59afdb04b170aaa664c024a3a458eed0ee4954eca300d517a1665dcdba2a04e2.json  query-7204e9c04cc636c2aa2d0b7b72e34827090071da5803a25eab58c5e1ba36bf59.json  query-74587585412618e4df6c30183411009496b6ece053ac8ffb7c97292b442e402a.json  query-820cec4fb390f2d3df252f3c70e183765ef236ea84d2aa6e976f388187c28556.json  query-901bcf20976ff33512907790c429e2d34d45f9384f19dea58fca290216fe229e.json  query-abc674ad062e8f7081899b97267b2da9e926e02a5f55367cec501404731c36b7.json  query-bee22e6794aa420fe4111f6eaddb3b22d1727091ef96a03115058fba7f37d819.json  query-c6d462340c5b50bcb348b237306c90ac00ba0cdb39971f0c79e2f4a93b0ed5fd.json  query-d3025257e58a5341a08cf8116a7ed080a0572a072c94ece6050b6e2a76694ac9.json  query-d7f08f3c85e20524810b5cdac45f879fbd52007c963158f49cd31222cb1cb0e2.json  query-f7a920cfba5e00adc833b24b9b49a4a7ea8d30b7ec1b700fddfc69902b7f89f9.json
dev/: compose.yaml
dev/init/: concepts.csv  init.sql  modules.csv
migrations/: 20250410124230_init.sql
src/: concept.rs  config.rs  error.rs  main.rs  module.rs  server.rs
(+2 files in other folders)
