[package]
name = "mdr-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres","uuid","migrate"] }
axum = { version = "0.8.1",features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
anyhow = "1.0.97"
serde_derive = "1.0.218"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
